@@ -47,6 +47,7 @@ Changes Since 0.3.9
 * docutils/parsers/rst/states.py:
 
   - Fixed bug with escaped colons indicating a literal block.
+  - Fixed bug with enumerated lists (SF#1254145).
 
 * docutils/parsers/rst/directives/misc.py:
 
@@ -56,6 +57,7 @@ Changes Since 0.3.9
 * docutils/parsers/rst/directives/images.py:
 
   - Added support for image width and height units.
+  - Fixed bug with image "target" options.
 
 * docutils/parsers/rst/include/: Directory added to project; contains
   standard data files for the "include" directive.  Initial contents:
